change body color
change the body color ,

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>find govt sites</title>
 </head>
-<body>
+<body bgcolor="red">
     <!-- ==============nevbar=================== -->
     <nav class="navbar navbar-light bg-light fixed-top">
         <div class="container-fluid">
