--- a/index.html
+++ b/index.html
@@ -64,46 +64,14 @@
     <br>
 
 <!-- ============================>> -->
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div class="card mb-3 " style="max-width: 540px; margin-left: 22px;">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="https://as1.ftcdn.net/v2/jpg/00/30/69/36/1000_F_30693609_kEtZUcTyWZ2PevPlAK6EunlDytTpRZ81.jpg" class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Internet Urls</h5>
-              <p class="card-text">URL stands for Uniform Resource Locator, and is used to specify addresses on the World Wide Web. A URL is the fundamental network identification for any resource connected to the web (e.g., hypertext pages, images, and sound files). The protocol specifies how information from the link is transferred.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <th>
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="http://surl.li/byfkr" class="img-fluid rounded-start" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Governament</h5>
-                  <p class="card-text">India is a Sovereign Socialist Secular Democratic Republic with a Parliamentary form of government which is federal in structure with unitary features. There is a Council of Ministers with the Prime Minster as its head to advice the President who is the constitutional head of the country.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div>
-    </div>
-  </div>
-</div>
-<br
-<!-- <!-- ============================================================== -- -->
+<ul class="list-group list-group-flush">
+  <li class="list-group-item">🔊</li>
+  <li class="list-group-item">🔊</li>
+  <li class="list-group-item">🔊</li>
+  <li class="list-group-item">🔊</li>
+  <li class="list-group-item">🔊</li>
+</ul>
+<br>
 
 <ul class="list-group list-group-flush">
   <li class="list-group-item">🔊</li>
@@ -113,6 +81,10 @@
   <li class="list-group-item">🔊</li>
 </ul>
 <br>
+
+
+<!-- <!-- ============================================================== -- -->
+
 
 <center>
   <nav aria-label="...">
@@ -139,4 +111,3 @@
 
 </body>
 </html>
-
