--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
 <!-- ============================>> -->
 <ul class="list-group list-group-flush">
-  <li class="list-group-item">🔊</li>
-  <li class="list-group-item">🔊</li>
-  <li class="list-group-item">🔊</li>
-  <li class="list-group-item">🔊</li>
-  <li class="list-group-item">🔊</li>
+ <li class="list-group-item"><marquee  behavior="alternate">🏅 2020 Medalist</marquee></li>
+ <li class="list-group-item"><marquee  behavior="alternate">🎈 Sports news</marquee></li>
+ <li class="list-group-item"><marquee  behavior="alternate">🎄 crismas news</marquee></li>
+ <li class="list-group-item"><marquee  behavior="alternate">🎞 movie news</marquee></li>
+ <li class="list-group-item"><marquee  behavior="alternate">🎮 tech news</marquee></li>
 </ul>
 <br>
 
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
