--- a/index.html
+++ b/index.html
@@ -12,32 +12,25 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">education</li>
+          <li class="breadcrumb-item active" aria-current="page">hospital</li>
         </ol>
       </nav>
 <!-- ============================================================================ -->
-<div class="row">
-  <div class="col-sm"><ul class="list-group">
-    <li class="list-group-item"><a href="https://tsbie.cgg.gov.in">Ts hall tickect dwonload </a></li>
-    <li class="list-group-item"><a href="https://results.cgg.gov.in/ResultMemorandum.do">Ts Inter results</a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/instructure.com">instructure.com</a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/quizlet.com"> quizlet.com </a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/blackboard.com">blackboard.com </a></li>
-  </ul></div>
-  <div class="col-sm"><ul class="list-group">
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/udemy.com">udemy.com </a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/scribd.com">scribd.com </a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/brainly.co.id"> brainly.co.id </a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/byjus.com">byjus.com </a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/quizizz.com"> quizizz.com </a></li>
-  </ul></div>
-  <div class="col-sm"><ul class="list-group">
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/duolingo.com">duolingo.com</a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/brainly.in"> brainly.in </a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/toppr.com">toppr.com </a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/coursera.org">coursera.org</a></li>
-    <li class="list-group-item"><a href="https://www.similarweb.com/website/brainly.com">brainly.com </a></li>
-  </ul></div>
+<div class="container">
+  <div class="row row-cols-2">
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+  </div>
 </div>
 
 <script src="js/jquery.min.js"></script>
@@ -49,4 +42,4 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
-</body> 
+</body>
