--- a/education.html
+++ b/education.html
@@ -18,8 +18,8 @@
 <!-- ============================================================================ -->
 <div class="row">
   <div class="col-sm"><ul class="list-group">
-    <li class="list-group-item"><a href="sbie.cgg.gov.in">Ts hall tickect dwonload </a></li>
-    <li class="list-group-item"><a href="reults.cgg.gov.in 2022">Ts Inter results</a></li>
+    <li class="list-group-item"><a href="https://tsbie.cgg.gov.in">Ts hall tickect dwonload </a></li>
+    <li class="list-group-item"><a href="https://results.cgg.gov.in/ResultMemorandum.do">Ts Inter results</a></li>
     <li class="list-group-item"><a href="https://www.similarweb.com/website/instructure.com">instructure.com</a></li>
     <li class="list-group-item"><a href="https://www.similarweb.com/website/quizlet.com"> quizlet.com </a></li>
     <li class="list-group-item"><a href="https://www.similarweb.com/website/blackboard.com">blackboard.com </a></li>
