--- a/bank.html
+++ b/bank.html
@@ -16,25 +16,29 @@
         </ol>
       </nav>
 <!-- ============================================================================ -->
-<div class="container">
-  <div class="row row-cols-2">
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-  </div>
+<div class="row">
+  <div class="col-sm"><ul class="list-group">
+    <li class="list-group-item"><a href="https://pdf.co/blog/biggest-banks-in-india?utm_referer=https%3A%2F%2Fpdf.co%2Fblog%2Fbiggest-banks-in-india#1">HDFC Bank Ltd</a></li>
+    <li class="list-group-item"><a href="https://pdf.co/blog/biggest-banks-in-india?utm_referer=https%3A%2F%2Fpdf.co%2Fblog%2Fbiggest-banks-in-india#2">State Bank of India (SBI) </a></li>
+    <li class="list-group-item"><a href="https://pdf.co/blog/biggest-banks-in-india?utm_referer=https%3A%2F%2Fpdf.co%2Fblog%2Fbiggest-banks-in-india#3">ICICI Bank Ltd </a></li>
+    <li class="list-group-item"><a href="https://pdf.co/blog/biggest-banks-in-india?utm_referer=https%3A%2F%2Fpdf.co%2Fblog%2Fbiggest-banks-in-india#4"> Kotak Mahindra Bank Ltd. </a></li>
+    <li class="list-group-item"><a href="https://pdf.co/blog/biggest-banks-in-india?utm_referer=https%3A%2F%2Fpdf.co%2Fblog%2Fbiggest-banks-in-india#5">Axis Bank Ltd.</a></li>
+  </ul></div>
+  <div class="col-sm"><ul class="list-group">
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/udemy.com">udemy.com </a></li>
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/scribd.com">scribd.com </a></li>
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/brainly.co.id"> brainly.co.id </a></li>
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/byjus.com">byjus.com </a></li>
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/quizizz.com"> quizizz.com </a></li>
+  </ul></div>
+  <div class="col-sm"><ul class="list-group">
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/duolingo.com">duolingo.com</a></li>
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/brainly.in"> brainly.in </a></li>
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/toppr.com">toppr.com </a></li>
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/coursera.org">coursera.org</a></li>
+    <li class="list-group-item"><a href="https://www.similarweb.com/website/brainly.com">brainly.com </a></li>
+  </ul></div>
 </div>
-
-
-
 
 
 <script src="js/jquery.min.js"></script>
