--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title font-monospace">Can i help you ?</h5>
-          <p class="card-text">Find the all governament sides URL's quiqly , with guidence </p>
+          <p class="card-text">Find the all importent urls related to education and bank aslo related to health.</p>
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
              CLICK TO SEE URLS 
