--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
    </div>
     <br>
    <!-------->
+  <center>
 
     <div class="container text-center">
       <div class="row m-2">
@@ -93,6 +94,7 @@
         </div>
       </div>
     </div>
+  </center>
     <span id="education"></span>
     <span id="hospital"></span>
    <br>
