--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
    </div>
     <br>
    <!-------->
-  <center>
 
     <div class="container text-center">
-      <div class="row m-2">
+      <div class="row">
         <div class="col">
 
           <div class="card shadow mb-5" style="width: 20rem;">
@@ -94,7 +93,6 @@
         </div>
       </div>
     </div>
-  </center>
     <span id="education"></span>
     <span id="hospital"></span>
    <br>
