--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
       <li class="list-group-item">A list item</li>
     </ol>
   </center>
+  <br>
+  <br>
+  <center><h3> THE END</h3></center>
 <script src="bootstrap.min.js"></script>
 </body>
 </html>
