--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
   </nav>
       <br>
   <!-------->
-
-   <div class="card p-3 border border-success shadow">
-    <h3><mark><u>Important URL !</u></mark></h3>
-    <br>
-    <p><strong>A </strong>URL (Uniform Resource Locator), more commonly known as a "web address," specifies the location of a resource (such as a web page) on the internet. <br>The URL also specifies how to retrieve that resource, also known as the "protocol," such as HTTP, HTTPS, FTP, etc.</p>
+    
+  <div class="card p-3 border border-success shadow">
+<center>
+  <div class="card text-bg-success mb-3" style="max-width: 18rem;">
+    <div class="card-header">Read this</div>
+    <div class="card-body">
+      <h5 class="card-title">Important URL !</h5>
+      <p class="card-text">URL (Uniform Resource Locator), more commonly known as a "web address," specifies the location of a resource (such as a web page) on the internet. <br>The URL also specifies how to retrieve that resource, also known as the "protocol," such as HTTP, HTTPS, FTP, etc.</p>
+    </div>
+  </div>
+</center>
    </div>
     <br>
    <!-------->
