--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="bootstrap.min.css"/>
   <title>Find URL</title>
 </head>
-<body>
+<body style="background-color:black;">
   <!-------->
   <nav class="navbar bg-light shadow border border-success">
     <div class="container-fluid">
