--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <link rel="stylesheet" href="bootstrap.min.css"/>
   <title>Find URL</title>
 </head>
-<body style="background-color:black;">
+<body style="background-color:rgb(165, 236, 172);">
   <!-------->
-  <nav class="navbar bg-light shadow border border-success">
+  <nav class="navbar bg-opacity-100 bg-success shadow border border-success">
     <div class="container-fluid">
       <a class="navbar-brand">FIND URL</a>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit" onclick="alert('feature is note working')" >Search</button>
+        <button class="btn btn-outline-light" type="submit" onclick="alert('feature is note working')" >Search</button>
       </form>
     </div>
   </nav>
       <br>
   <!-------->
     
-  <div class="card p-3 border border-success shadow">
+  <div class="card p-3 border border-success bg-black shadow">
 <center>
   <div class="card text-bg-success mb-3" style="max-width: 18rem;">
     <div class="card-header">Read this</div>
